# Arytmetyka_Komputerowa

./: .gitignore  CMakeLists.txt  EXTRA_data_gen.py  EXTRAresultsGMP.csv  Projekt_test_v1_nieskonczone  README.md  STAN_PRAC_01_04_2026.txt  Toom_Cook_3_v2.cpp  analysis.py  data_gen.py  fast_tests.cpp  implementacja.cpp  implementacja_wersja_big_endian.cpp  main_GMP.cpp  main_PYTHON.py  requirements.txt  results.csv  resultsGMP.csv  resultsPython.csv  resultsToom.csv
Dane_wygenerowane/: data_100.txt  data_1000.txt  data_150.txt  data_200.txt  data_250.txt  data_300.txt  data_350.txt  data_400.txt  data_450.txt  data_50.txt  data_500.txt  data_550.txt  data_600.txt  data_650.txt  data_700.txt  data_750.txt  data_800.txt  data_850.txt  data_900.txt  data_950.txt
Dokumentacja/: ToomCook_G3PRO_TEST_1.cpp  main.tex  references.bib
